# oculus_drone

./: Oculus SDK.txt  README.md  ardrone_bottom.yaml  ardrone_front.yaml  package_setup.sh  sim.rviz  simulation_runs.txt
ardrone_joystick/: CMakeLists.txt  package.xml
ardrone_joystick/launch/: teleop.launch
ardrone_joystick/src/: main.cpp  main_joy_only.cpp
drone_vr/: CMakeLists.txt  package.xml
drone_vr/launch/: ar_test.launch  ardrone.launch  ardrone_joy_only.launch  simulate.launch  simulate_joy_only.launch  viewer.launch
drone_vr/src/: drone_teleop_joy.cpp  teleop_3d.cpp
