<?xml version="1.0"?>
<package>
  <name>ardrone_joystick</name>
  <version>1.0.0</version>
  <description>The ardrone_joystick package</description>
  <maintainer email="dmorra@jhu.edu">David Morra</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>