<?xml version="1.0"?>
<package>
  <name>drone_vr</name>
  <version>1.0.0</version>
  <description>The drone_vr package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dmorra1@jhu.edu">David Morra</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ardrone_joystick</build_depend>
  <run_depend>roscpp</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>